objects/RA_Course__c.object
<CustomObject>
    <label>Course</label>
    <nameField>
        <label>RA_Course__c</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Tests__c</fullName>
        <label>Tests</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>Skills</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Riding_c__c</fullName>
        <label>Riding Experience Page</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1: Reason for taking?</fullName>
                </value>
                <value>
                    <fullName>Q2: Ride a bike?</fullName>
                </value>
                <value>
                    <fullName>Q3: Manual transmission?</fullName>
                </value>
                <value>
                    <fullName>Q4: Motorcycle riding history?</fullName>
                </value>
                <value>
                    <fullName>Q5: Beginner course before?</fullName>
                </value>
                <value>
                    <fullName>Q6: Own &amp; ride motorcycle?</fullName>
                </value>
                <value>
                    <fullName>Q7: Brand owned?</fullName>
                </value>
                <value>
                    <fullName>Q8: Make purchase?</fullName>
                </value>
                <value>
                    <fullName>Q9: Brand to purchase?</fullName>
                </value>
                <value>
                    <fullName>Q10: Graduate/Guest?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_code_c__c</fullName>
        <label>Course Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_c__c</fullName>
        <label>Description</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Days_c__c</fullName>
        <label>Minimum Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_label_c__c</fullName>
        <label>Search label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order_c__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_hours_c__c</fullName>
        <label>Minimum hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tests__c</fullName>
        <label>Number of Tests</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_to_Survey_c__c</fullName>
        <label>Link to Survey</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mandatory_locations__c</fullName>
        <label>Mandatory locations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Meeting Place</fullName>
                </value>
                <value>
                    <fullName>Optional VIP</fullName>
                </value>
                <value>
                    <fullName>Experience</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Coach_ratio__c</fullName>
        <label>Student Coach ratio</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_what_to_wear_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email what to wear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_what_To_Bring_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email what To Bring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience_Required_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experience Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_score_required_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test score required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questions_Step_3_page_c__c</fullName>
        <label>Questions (Step 3 page)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1: License #</fullName>
                </value>
                <value>
                    <fullName>Q2: Country</fullName>
                </value>
                <value>
                    <fullName>Q3: State</fullName>
                </value>
                <value>
                    <fullName>Q4: Expiration Date</fullName>
                </value>
                <value>
                    <fullName>Q5: Learner’s Permit?</fullName>
                </value>
                <value>
                    <fullName>Q6: Motorcycle Endrsmt/Lic?</fullName>
                </value>
                <value>
                    <fullName>Q7: Reg. or Rental Agrmt?</fullName>
                </value>
                <value>
                    <fullName>Q8: Proof of Insurance?</fullName>
                </value>
                <value>
                    <fullName>Q9 : Sponsoring Dealership Number</fullName>
                </value>
                <value>
                    <fullName>Q10 : Sponsoring Dealership Riding Academy Manager Name</fullName>
                </value>
                <value>
                    <fullName>Q11 : Coach Number</fullName>
                </value>
                <value>
                    <fullName>Q12 : Emergency Contact Name</fullName>
                </value>
                <value>
                    <fullName>Q13 : Emergency Contact Phone Number</fullName>
                </value>
                <value>
                    <fullName>Q14 : Do You Have Any Allergies?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_not_send_CXI_survey_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not send CXI survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience_or_Training_c__c</fullName>
        <label>Experience or Training?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Experience</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questions_Basic_Information_c__c</fullName>
        <label>Questions (Basic Information)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1 : Date of Birth</fullName>
                </value>
                <value>
                    <fullName>Q2 : Gender</fullName>
                </value>
                <value>
                    <fullName>Q3 : Do You Currently or have you served in the U.S. military?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_form_step3_label_c__c</fullName>
        <label>Registration form step3 label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DRIVER&apos;S LICENSE</fullName>
                </value>
                <value>
                    <fullName>COACH TRAINING DETAILS</fullName>
                </value>
                <value>
                    <fullName>ADDITIONAL DETAILS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Header_description_for_experience_c__c</fullName>
        <label>Header description for experience</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>